# fiducials

./: .travis.yml  README.md
aruco_detect/: CMakeLists.txt  package.xml
aruco_detect/launch/: aruco_detect.launch.py
aruco_detect/src/: aruco_detect.cpp
fiducial_slam/: CMakeLists.txt  package.xml
fiducial_slam/include/fiducial_slam/: fiducial_slam.hpp  map.hpp  transform_with_variance.h
fiducial_slam/launch/: fiducial_slam.launch.py
fiducial_slam/resources/: .gitignore
fiducial_slam/src/: fiducial_slam.cpp  map.cpp
fiducials/: CMakeLists.txt  package.xml
fiducials/launch/: fiducials.launch.py
